test/sema/null-check-analysis/null-check-extra-unwrap-in-if-condition.delta
// RUN: %check_errors %not %delta -typecheck %s

struct S: Copyable {
    S*? a;
}

S*? foo(S* p) {
    var n = p;

    while (n.a != null) {
        // CHECK: [[@LINE+1]]:22: error: cannot unwrap non-optional type 'S*'
        if (n === n.a!.a) {
            return n.a!.a;
        }
        n = n.a;
    }

    return null;
}
